RESOLVED FIXED67597
Regression of bug 65333 - Fix speech input icon rect on RTL directions
https://bugs.webkit.org/show_bug.cgi?id=67597
Summary Regression of bug 65333 - Fix speech input icon rect on RTL directions
Leandro Graciá Gil
Reported 2011-09-05 05:18:48 PDT
Patch from bug 60170 has introduced a regression making bug 65333 to appear again.
Attachments
Patch (1.66 KB, patch)
2011-09-05 06:20 PDT, Leandro Graciá Gil
tonyg: review+
tonyg: commit-queue-
Leandro Graciá Gil
Comment 1 2011-09-05 06:20:47 PDT
Tony Gentilcore
Comment 2 2011-09-05 07:13:15 PDT
Comment on attachment 106329 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=106329&action=review > Source/WebCore/ChangeLog:7 > + Would be really nice to describe the regression here so that anyone seeing this patch in the future doesn't have to refer to the bug and patch mentioned above.
Leandro Graciá Gil
Comment 3 2011-09-05 08:01:05 PDT
Note You need to log in before you can comment on or make changes to this bug.