Fix the regression of bug 65333 introduced by 60170. This caused the speech input bubble to appear in the wrong side for RTL text inputs. https://bugs.webkit.org/show_bug.cgi?id=67597

Reviewed by Tony Gentilcore.

No new tests. Fixing regression.

* html/shadow/TextControlInnerElements.cpp:
(WebCore::InputFieldSpeechButtonElement::startSpeechInput):

Canonical link: https://commits.webkit.org/83438@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94531 268f45cc-cd09-0410-ab3c-d52691b4dbfc