Source/WebCore/html/shadow/TextControlInnerElements.cpp
@@ -527,7 +527,7 @@ void InputFieldSpeechButtonElement::startSpeechInput()
     RefPtr<HTMLInputElement> input = static_cast<HTMLInputElement*>(shadowAncestorNode());
     AtomicString language = input->computeInheritedLanguage();
     String grammar = input->getAttribute(webkitgrammarAttr);
-    IntRect rect = input->renderer()->absoluteBoundingBoxRect();
+    IntRect rect = renderer()->absoluteBoundingBoxRect();
     if (speechInput()->startRecognition(m_listenerId, rect, language, grammar, document()->securityOrigin()))
         setState(Recording);
 }
